WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230372
Fix some issues with the code paths that call into ScrollAnimator::contentAreaWillPaint()
https://bugs.webkit.org/show_bug.cgi?id=230372
Summary
Fix some issues with the code paths that call into ScrollAnimator::contentAre...
Simon Fraser (smfr)
Reported
2021-09-16 13:48:03 PDT
Fix some issues with the code paths that call into ScrollAnimator::contentAreaWillPaint()
Attachments
Patch
(8.77 KB, patch)
2021-09-16 13:52 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-09-16 13:52:52 PDT
Created
attachment 438398
[details]
Patch
EWS
Comment 2
2021-09-16 19:33:34 PDT
Committed
r282629
(
241786@main
): <
https://commits.webkit.org/241786@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438398
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-09-16 19:34:20 PDT
<
rdar://problem/83223578
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug